--- a/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/MyMessageCell/MyMessageTableViewCell.xib
+++ b/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/MyMessageCell/MyMessageTableViewCell.xib
@@ -19,10 +19,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="User Message" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wro-Sv-EuK">
-                        <rect key="frame" x="108" y="10" width="200" height="55"/>
+                        <rect key="frame" x="192.5" y="10" width="115.5" height="55"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="200" id="EY8-hu-LuM"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="EY8-hu-LuM"/>
                         </constraints>
                         <color key="textColor" systemColor="labelColor"/>
                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="15"/>
@@ -37,7 +37,7 @@
                         </userDefinedRuntimeAttributes>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="225-Yc-oL9">
-                        <rect key="frame" x="79" y="55" width="24" height="10"/>
+                        <rect key="frame" x="163.5" y="55" width="24" height="10"/>
                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
