--- a/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatUserList/View/ChatUserListTableViewCell.xib
+++ b/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatUserList/View/ChatUserListTableViewCell.xib
@@ -18,19 +18,25 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iM7-Bx-k6x">
-                        <rect key="frame" x="10" y="10" width="50" height="50"/>
+                        <rect key="frame" x="10" y="5" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="TyK-gb-7dT"/>
+                            <constraint firstAttribute="width" constant="60" id="TyK-gb-7dT"/>
                             <constraint firstAttribute="width" secondItem="iM7-Bx-k6x" secondAttribute="height" id="YzH-pf-Qc6"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="25"/>
+                                <real key="value" value="30"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ユーザー名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lc2-bd-JFy">
-                        <rect key="frame" x="75" y="25" width="98.5" height="20"/>
+                        <rect key="frame" x="85" y="25" width="98.5" height="20"/>
                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
