--- a/BookList/Presentation/Presentation-Domain/Screen/Chat/ChatSelect/View/ChatSelectTableViewCell.xib
+++ b/BookList/Presentation/Presentation-Domain/Screen/Chat/ChatSelect/View/ChatSelectTableViewCell.xib
@@ -5,12 +5,13 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="ChatSelectTableViewCell" customModule="BookList_iOS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="ChatSelectTableViewCell" customModule="BookList" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -18,51 +19,51 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch_Image" translatesAutoresizingMaskIntoConstraints="NO" id="H8Y-1b-hOE">
-                        <rect key="frame" x="10" y="25" width="50" height="50"/>
+                        <rect key="frame" x="10" y="20" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="H8Y-1b-hOE" secondAttribute="height" id="hxi-Gr-ofI"/>
-                            <constraint firstAttribute="width" constant="50" id="mcn-kw-Nra"/>
+                            <constraint firstAttribute="width" constant="60" id="mcn-kw-Nra"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="25"/>
+                                <real key="value" value="20"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sD8-8m-8FD">
-                        <rect key="frame" x="70" y="35" width="103" height="20"/>
+                        <rect key="frame" x="90" y="55" width="87.5" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="5Qe-1j-Eso"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpj-4F-b3w">
-                        <rect key="frame" x="70" y="65" width="99.5" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="96e-mB-Kbp"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="12"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="14"/>
+                        <color key="textColor" systemColor="systemGrayColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PIY-IY-KRI">
-                        <rect key="frame" x="356.5" y="20" width="33.5" height="14"/>
-                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="14"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="359" y="10" width="31" height="12"/>
+                        <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="12"/>
+                        <color key="textColor" systemColor="systemGrayColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpj-4F-b3w">
+                        <rect key="frame" x="90" y="25" width="133" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="96e-mB-Kbp"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="16"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="PIY-IY-KRI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="1dP-eT-49e"/>
+                    <constraint firstItem="PIY-IY-KRI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="1dP-eT-49e"/>
                     <constraint firstAttribute="trailing" secondItem="PIY-IY-KRI" secondAttribute="trailing" constant="10" id="2fy-t0-twJ"/>
                     <constraint firstItem="H8Y-1b-hOE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="7dl-2D-8yD"/>
-                    <constraint firstItem="bpj-4F-b3w" firstAttribute="leading" secondItem="H8Y-1b-hOE" secondAttribute="trailing" constant="10" id="CSq-cT-uCO"/>
+                    <constraint firstItem="sD8-8m-8FD" firstAttribute="top" secondItem="bpj-4F-b3w" secondAttribute="bottom" constant="10" id="7ov-mi-w0t"/>
                     <constraint firstItem="H8Y-1b-hOE" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Rtb-Yc-Tce"/>
-                    <constraint firstItem="bpj-4F-b3w" firstAttribute="top" secondItem="sD8-8m-8FD" secondAttribute="bottom" constant="10" id="b1I-vs-HRf"/>
-                    <constraint firstItem="sD8-8m-8FD" firstAttribute="leading" secondItem="H8Y-1b-hOE" secondAttribute="trailing" constant="10" id="f0t-eu-6WC"/>
-                    <constraint firstItem="sD8-8m-8FD" firstAttribute="top" secondItem="H8Y-1b-hOE" secondAttribute="top" constant="10" id="zFW-1m-zbl"/>
+                    <constraint firstItem="sD8-8m-8FD" firstAttribute="leading" secondItem="H8Y-1b-hOE" secondAttribute="trailing" constant="20" id="UKo-eb-cZm"/>
+                    <constraint firstItem="bpj-4F-b3w" firstAttribute="top" secondItem="H8Y-1b-hOE" secondAttribute="top" constant="5" id="ers-UF-5de"/>
+                    <constraint firstItem="bpj-4F-b3w" firstAttribute="leading" secondItem="H8Y-1b-hOE" secondAttribute="trailing" constant="20" id="r0M-Zy-9Kq"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -77,5 +78,8 @@
     </objects>
     <resources>
         <image name="Launch_Image" width="150" height="150"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
