--- a/BookList/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/OtherMessageCell/OtherMessageTableViewCell.xib
+++ b/BookList/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/OtherMessageCell/OtherMessageTableViewCell.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch_Image" translatesAutoresizingMaskIntoConstraints="NO" id="17Q-TG-PO5">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="17Q-TG-PO5">
                         <rect key="frame" x="10" y="17.5" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="17Q-TG-PO5" secondAttribute="height" id="aaZ-Lz-lVt"/>
@@ -76,7 +76,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Launch_Image" width="150" height="150"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
