--- a/BookList/Presentation/Presentation-Domain/Screen/Chat/ChatSelect/View/ChatSelectTableViewCell.xib
+++ b/BookList/Presentation/Presentation-Domain/Screen/Chat/ChatSelect/View/ChatSelectTableViewCell.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch_Image" translatesAutoresizingMaskIntoConstraints="NO" id="H8Y-1b-hOE">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H8Y-1b-hOE">
                         <rect key="frame" x="10" y="20" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="H8Y-1b-hOE" secondAttribute="height" id="hxi-Gr-ofI"/>
@@ -77,7 +77,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Launch_Image" width="150" height="150"/>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
